# mealie-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: live-test-reviewer.md
.claude/commands/: review-pr.md  triage-issue.md
.claude/rules/: live-tests.md  tools.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-agent-run.yml  claude-doc-sync.yml  claude-issue-triage.yml  claude-on-demand.yml  claude-pr-review.yml  claude-task-with-mealie.yml  security-scan.yml
scripts/: README.md  gen-token  mealie-up
spec/: mealie-openapi.json
src/mealie_mcp/: __init__.py  client_factory.py  config.py  server.py
src/mealie_mcp/_scripts/: regen_client.py
src/mealie_mcp/client/api/explore_foods/: get_all_api_explore_groups_group_slug_foods_get.py  get_one_api_explore_groups_group_slug_foods_item_id_get.py
src/mealie_mcp/client/api/explore_recipes/: get_recipe_api_explore_groups_group_slug_recipes_recipe_slug_get.py  suggest_recipes_api_explore_groups_group_slug_recipes_suggestions_get.py
src/mealie_mcp/client/api/households_shopping_list_items/: create_many_api_households_shopping_items_create_bulk_post.py  create_one_api_households_shopping_items_post.py  get_all_api_households_shopping_items_get.py  get_one_api_households_shopping_items_item_id_get.py  update_many_api_households_shopping_items_put.py  update_one_api_households_shopping_items_item_id_put.py
src/mealie_mcp/client/models/: __init__.py  admin_about_info.py  app_info.py  create_ingredient_food.py  create_ingredient_food_extras_type_0.py  create_ingredient_unit.py  create_ingredient_unit_extras_type_0.py  ingredient_food.py  ingredient_food_extras_type_0.py  ingredient_food_output.py  ingredient_food_output_extras_type_0.py  ingredient_food_pagination.py  ingredient_unit.py  ingredient_unit_extras_type_0.py  ingredient_unit_output.py  ingredient_unit_output_extras_type_0.py  ingredient_unit_pagination.py  mealie_schema_recipe_recipe_comments_user_base.py  mealie_schema_user_user_user_base.py  pagination_base_ingredient_food.py  parsed_ingredient.py  recipe.py  recipe_comment_out.py  recipe_comment_out_output.py  recipe_comment_pagination.py  recipe_extras_type_0.py  recipe_ingredient_output.py  recipe_output.py  recipe_output_extras_type_0.py  recipe_share_token.py  recipe_suggestion_response.py  recipe_suggestion_response_item.py  recipe_timeline_event_in.py  recipe_timeline_event_out.py  shopping_list_create.py  shopping_list_create_extras_type_0.py  shopping_list_item_create.py  shopping_list_item_create_extras_type_0.py  shopping_list_item_out.py  shopping_list_item_out_extras_type_0.py  (+15 more)
src/mealie_mcp/tools/: __init__.py  _common.py  groups_multi_purpose_labels.py  households_cookbooks.py  households_mealplan_rules.py  households_mealplans.py  households_shopping_list_items.py  households_shopping_lists.py  organizer_categories.py  organizer_tags.py  organizer_tools.py  recipe_bulk_actions.py  recipe_comments.py  recipe_crud.py  recipe_timeline.py  recipes_foods.py  recipes_units.py  users_ratings.py
tests/: conftest.py
tests/live/: conftest.py  test_groups_multi_purpose_labels.py  test_households_cookbooks.py  test_households_mealplan_rules.py  test_households_mealplans.py  test_households_shopping_list_items.py  test_households_shopping_lists.py  test_mcp_protocol.py  test_organizer_categories.py  test_organizer_tags.py  test_organizer_tools.py  test_recipe_bulk_actions.py  test_recipe_comments.py  test_recipe_crud.py  test_recipe_timeline.py  test_recipes_foods.py  test_recipes_units.py  test_users_ratings.py
tests/unit/: test_client_factory.py  test_common.py  test_config.py  test_groups_multi_purpose_labels.py  test_households_cookbooks.py  test_households_mealplan_rules.py  test_households_mealplans.py  test_households_shopping_list_items.py  test_households_shopping_lists.py  test_organizer_categories.py  test_organizer_tags.py  test_organizer_tools.py  test_recipe_bulk_actions.py  test_recipe_comments.py  test_recipe_crud.py  test_recipe_timeline.py  test_recipes_foods.py  test_recipes_units.py  test_server.py  test_server_import.py  test_users_ratings.py
(+37 files in other folders)
